--- a/index.html
+++ b/index.html
@@ -6,33 +6,23 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- 
-    - primary meta tags
-  -->
+  <!-- primary meta tags   -->
   <title>La3eb</title>
   <meta name="title" content="Adex">
   <meta name="description" content="This is a business agency html template made by codewithsadee">
 
-  <!-- 
-    - favicon
-  -->
+  <!--favicon (icon) -->
   <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
 
-  <!-- 
-    - google font link
-  -->
+  <!-- (- google font link)  -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap" rel="stylesheet">
 
-  <!-- 
-    - custom css link
-  -->
+  <!--  (- custom css link) -->
   <link rel="stylesheet" href="./assets/css/style.css">
 
-  <!-- 
-    - preload images
-  -->
+  <!-- (- preload images)-->
   <link rel="preload" as="image" href="./assets/images/hero-bg.jpg">
   <link rel="preload" as="image" href="./assets/images/hero-slide-1.jpg">
   <link rel="preload" as="image" href="./assets/images/hero-slide-2.jpg">
@@ -42,24 +32,22 @@
 
 <body>
 
-  <!-- 
-    - #HEADER
-  -->
+  <!-- (#HEADER) -->
 
   <header class="header" data-header>
     <div class="container">
 
       <a href="#" class="logo">
-        <img src="./assets/images/logo-light.svg" width="74" height="24" alt="Adex home" class="logo-light">
+        <img src="./assets/images/la3eb-light.svg" width="74" height="24" alt="la3eb home" class="logo-light">
 
-        <img src="./assets/images/logo-dark.svg" width="74" height="24" alt="Adex home" class="logo-dark">
+        <img src="./assets/images/la3eb-dark.svg" width="74" height="24" alt="la3eb home" class="logo-dark">
       </a>
 
       <nav class="navbar" data-navbar>
 
         <div class="navbar-top">
           <a href="#" class="logo">
-            <img src="./assets/images/logo-light.svg" width="74" height="24" alt="Adex home">
+            <img src="./assets/images/la3eb-light.svg" width="74" height="24" alt="La3eb home">
           </a>
 
           <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
@@ -151,9 +139,7 @@
   <main>
     <article>
 
-      <!-- 
-        - #HERO
-      -->
+      <!-- (- #HERO )-->
 
       <section class="section hero has-bg-image" aria-label="home"
         style="background-image: url('./assets/images/hero-bg.jpg')">
@@ -229,13 +215,7 @@
         </div>
       </section>
 
-
-
-
-
-      <!-- 
-        - #SERVICE
-      -->
+      <!-- (- #SERVICE) -->
 
       <section class="section service" aria-labelledby="service-label">
         <div class="container">
@@ -345,13 +325,7 @@
         </div>
       </section>
 
-
-
-
-
-      <!-- 
-        - #ABOUT
-      -->
+      <!-- - #ABOU  -->
 
       <section class="about" aria-labelledby="about-label">
         <div class="container">
@@ -438,13 +412,7 @@
         </div>
       </section>
 
-
-
-
-
-      <!-- 
-        - #FEATURE
-      -->
+      <!-- (- #FEATURE) -->
 
       <section class="section feature" aria-labelledby="feature-label">
         <div class="container">
@@ -532,13 +500,7 @@
         </div>
       </section>
 
-
-
-
-
-      <!-- 
-        - #STATS
-      -->
+      <!-- (- #STATS)  -->
 
       <section class="stats" aria-label="our stats">
         <div class="container">
@@ -583,12 +545,7 @@
       </section>
 
 
-
-
-
-      <!-- 
-        - #PROJECT
-      -->
+      <!-- (- #PROJECT)  -->
 
       <section class="section project" aria-labelledby="project-label">
         <div class="container">
@@ -727,12 +684,7 @@
       </section>
 
 
-
-
-
-      <!-- 
-        - #CTA
-      -->
+      <!--  (- #CTA) -->
 
       <section class="cta" aria-label="call to action">
         <div class="container">
@@ -763,7 +715,7 @@
       <div class="footer-brand">
 
         <a href="#" class="logo">
-          <img src="./assets/images/logo-light.svg" width="74" height="24" alt="Adex home">
+          <img src="./assets/images/la3eb-light.svg" width="74" height="24" alt="Adex home">
         </a>
 
         <p class="footer-text">
