--- a/index.html
+++ b/index.html
@@ -180,11 +180,11 @@
 
                   <div class="hero-card">
                     <figure class="img-holder" style="--width: 575; --height: 550;">
-                      <img src="./assets/images/hero-slide-2.jpg" width="575" height="550" alt="hero banner"
+                      <img src="./assets/images/hero-slide-2.jpeg" width="575" height="550" alt="hero banner"
                         class="img-cover">
                     </figure>
 
-                    <button class="play-btn" aria-label="play adex intro">
+                    <button class="play-btn" aria-label="play la3eb intro">
                       <ion-icon name="play" aria-hidden="true"></ion-icon>
                     </button>
                   </div>
