--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- primary meta tags   -->
-  <title>La3eb</title>
-  <meta name="title" content="Adex">
-  <meta name="description" content="This is a business agency html template made by codewithsadee">
+  <title>pass & shot</title>
+  <meta name="title" content="pass & shot">
+  <meta name="description" content="This is players agency">
 
   <!--favicon (icon) -->
-  <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
+  <link rel="shortcut icon" href="./favicon.png" type="image/svg+xml">
 
   <!-- (- google font link)  -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -38,16 +38,16 @@
     <div class="container">
 
       <a href="#" class="logo">
-        <img src="./assets/images/la3eb-light.svg" width="74" height="24" alt="la3eb home" class="logo-light">
+        <img src="./assets/images/logo-light.png" width="150" height="24" alt="pass & shot home" class="logo-light">
 
-        <img src="./assets/images/la3eb-dark.svg" width="74" height="24" alt="la3eb home" class="logo-dark">
+        <img src="./assets/images/logo-dark.png" width="150" height="24" alt="pass & shot home" class="logo-dark">
       </a>
 
       <nav class="navbar" data-navbar>
 
         <div class="navbar-top">
           <a href="#" class="logo">
-            <img src="./assets/images/la3eb-light.svg" width="74" height="24" alt="La3eb home">
+            <img src="./assets/images/logo-light.svg" width="74" height="24" alt="pass & shot home">
           </a>
 
           <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
@@ -66,11 +66,11 @@
           </li>
 
           <li>
-            <a href="#" class="navbar-link">Projects</a>
+            <a href="#" class="navbar-link">Players</a>
           </li>
 
           <li>
-            <a href="#" class="navbar-link">Blog</a>
+            <a href="#" class="navbar-link">coaches</a>
           </li>
 
           <li>
@@ -143,7 +143,7 @@
 
           <div class="hero-content">
 
-            <h1 class="h1 hero-title">Crafting project specific solutions with expertise.</h1>
+            <h1 class="h1 hero-title">pass & shot  Players Agency</h1>
 
             <p class="hero-text">
               We’re a creative company that focuses on establishing long-term relationships with customers.
@@ -180,7 +180,7 @@
                         class="img-cover">
                     </figure>
 
-                    <button class="play-btn" aria-label="play la3eb intro">
+                    <button class="play-btn" aria-label="play pass & shot intro">
                       <ion-icon name="play" aria-hidden="true"></ion-icon>
                     </button>
                   </div>
@@ -231,11 +231,11 @@
                   <ion-icon name="call-outline" aria-hidden="true"></ion-icon>
                 </div>
 
-                <h3 class="h4 card-title">24/7 Support</h3>
+                <h3 class="h4 card-title">Full coverage of all governorates of Egypt.</h3>
 
                 <p class="card-text">
-                  Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus cras
-                  justo.
+                  We seek to discover talents in various governorates of Egypt as an application of the principle of equal
+                   opportunities among all talented players who have not found a refuge to nurture and showcase their skills.
                 </p>
 
                 <a href="#" class="btn-text">
@@ -254,11 +254,11 @@
                   <ion-icon name="shield-checkmark-outline" aria-hidden="true"></ion-icon>
                 </div>
 
-                <h3 class="h4 card-title">Secure Payments</h3>
+                <h3 class="h4 card-title">Professional team</h3>
 
                 <p class="card-text">
-                  Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus cras
-                  justo.
+                  pass & shot.com operates under the management of a competent team that includes all specialties
+                  to ensure the effective management of the system, which guarantees the success of all beneficiaries.
                 </p>
 
                 <a href="#" class="btn-text">
@@ -277,7 +277,7 @@
                   <ion-icon name="cloud-download-outline" aria-hidden="true"></ion-icon>
                 </div>
 
-                <h3 class="h4 card-title">Daily Updates</h3>
+                <h3 class="h4 card-title">A comprehensive package of services.</h3>
 
                 <p class="card-text">
                   Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus cras
@@ -321,7 +321,7 @@
         </div>
       </section>
 
-      <!-- - #ABOU  -->
+      <!-- - #ABOUt us  -->
 
       <section class="about" aria-labelledby="about-label">
         <div class="container">
@@ -407,96 +407,7 @@
 
         </div>
       </section>
-
-      <!-- (- #FEATURE) -->
-
-      <section class="section feature" aria-labelledby="feature-label">
-        <div class="container">
-
-          <figure class="feature-banner">
-            <img src="./assets/images/feature-banner.png" width="800" height="531" loading="lazy" alt="feature banner"
-              class="w-100">
-          </figure>
-
-          <div class="feature-content">
-
-            <p class="section-subtitle" id="feautre-label">Our Solutions</p>
-
-            <h2 class="h2 section-title">
-              We make your spending stress-free for you to have the perfect control.
-            </h2>
-
-            <p class="section-text">
-              Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras justo odio,
-              dapibus ac facilisis in, egestas eget quam. Praesent commodo cursus.
-            </p>
-
-            <ul class="feature-list">
-
-              <li>
-                <div class="feature-card">
-
-                  <div class="card-icon">
-                    <ion-icon name="checkmark" aria-hidden="true"></ion-icon>
-                  </div>
-
-                  <span class="span">
-                    Aenean quam ornare. Curabitur blandit.
-                  </span>
-
-                </div>
-              </li>
-
-              <li>
-                <div class="feature-card">
-
-                  <div class="card-icon">
-                    <ion-icon name="checkmark" aria-hidden="true"></ion-icon>
-                  </div>
-
-                  <span class="span">
-                    Nullam quis risus eget urna mollis ornare.
-                  </span>
-
-                </div>
-              </li>
-
-              <li>
-                <div class="feature-card">
-
-                  <div class="card-icon">
-                    <ion-icon name="checkmark" aria-hidden="true"></ion-icon>
-                  </div>
-
-                  <span class="span">
-                    Etiam porta euismod malesuada mollis.
-                  </span>
-
-                </div>
-              </li>
-
-              <li>
-                <div class="feature-card">
-
-                  <div class="card-icon">
-                    <ion-icon name="checkmark" aria-hidden="true"></ion-icon>
-                  </div>
-
-                  <span class="span">
-                    Vivamus sagittis lacus vel augue rutrum.
-                  </span>
-
-                </div>
-              </li>
-
-            </ul>
-
-          </div>
-
-        </div>
-      </section>
-
-      <!-- (- #STATS)  -->
+ <!-- (- #STATS)  -->
 
       <section class="stats" aria-label="our stats">
         <div class="container">
@@ -711,7 +622,7 @@
       <div class="footer-brand">
 
         <a href="#" class="logo">
-          <img src="./assets/images/la3eb-light.svg" width="74" height="24" alt="Adex home">
+          <img src="./assets/images/logo-light.svg" width="74" height="24" alt="Adex home">
         </a>
 
         <p class="footer-text">
