--- a/home.html
+++ b/home.html
@@ -37,7 +37,7 @@
   <header class="header" data-header>
     <div class="container">
 
-      <!--logo in header  -->
+      <!--logo in header (pc)  -->
       <a href="#" class="logo">
         <img src="./assets/images/logo-light.png" width="150" height="24" alt="pass & shot home" class="logo-light">
 
@@ -45,12 +45,12 @@
       </a>
 
       <nav class="navbar" data-navbar>
-
+        <!-- logo for mobile in hamburger menu -->
         <div class="navbar-top">
           <a href="#" class="logo">
             <img src="./assets/images/logo-light.png" width="74" height="24" alt="pass & shot home">
           </a>
-
+          <!-- x button -->
           <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
             <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
           </button>
@@ -239,8 +239,7 @@
                 </p>
 
                 <a href="#" class="btn-text">
-                  <span class="span">Learn More</span>
-
+                 
                   <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
                 </a>
 
@@ -262,7 +261,7 @@
                 </p>
 
                 <a href="#" class="btn-text">
-                  <span class="span">Learn More</span>
+                  
 
                   <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
                 </a>
@@ -285,7 +284,6 @@
                 </p>
 
                 <a href="#" class="btn-text">
-                  <span class="span">Learn More</span>
 
                   <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
                 </a>
@@ -308,7 +306,6 @@
                 </p>
 
                 <a href="#" class="btn-text">
-                  <span class="span">Learn More</span>
 
                   <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
                 </a>
