--- a/aboutUs.html
+++ b/aboutUs.html
@@ -42,16 +42,16 @@
     <div class="container">
 
       <a href="#" class="logo">
-        <img src="./assets/images/logo-light.svg" width="74" height="24" alt="Adex home" class="logo-light">
+        <img src="assets/images/logo-light.svg" width="74" height="24" alt="Adex home" class="logo-light">
 
-        <img src="./assets/images/logo-dark.svg" width="74" height="24" alt="Adex home" class="logo-dark">
+        <img src="assets/images/logo-dark.svg" width="74" height="24" alt="Adex home" class="logo-dark">
       </a>
 
       <nav class="navbar" data-navbar>
 
         <div class="navbar-top">
-          <a href="#" class="logo">
-            <img src="./assets/images/logo-light.svg" width="74" height="24" alt="Adex home">
+          <a href="/" class="logo">
+            <img src="assets/images/logo-light.svg" width="74" height="24" alt="Adex home">
           </a>
 
           <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
@@ -62,11 +62,11 @@
         <ul class="navbar-list">
 
           <li>
-            <a href="#" class="navbar-link">Home</a>
+            <a href="/" class="navbar-link">Home</a>
           </li>
 
           <li>
-            <a href="#" class="navbar-link">About</a>
+            <a href="aboutUs.html" class="navbar-link">About</a>
           </li>
 
           <li>
