--- a/home.html
+++ b/home.html
@@ -59,15 +59,15 @@
         <ul class="navbar-list">
 
           <li>
-            <a href="#" class="navbar-link">Home</a>
+            <a href="/" class="navbar-link">Home</a>
           </li>
 
           <li>
-            <a href="#" class="navbar-link">About</a>
+            <a href="aboutUs.html" class="navbar-link">About</a>
           </li>
 
           <li>
-            <a href="#" class="navbar-link">Players</a>
+            <a href="players.html" class="navbar-link">Players</a>
           </li>
 
           <li>
