--- a/aboutUs.html
+++ b/aboutUs.html
@@ -34,31 +34,30 @@
 </head>
 <body>
 
-      <!-- 
-    - #HEADER
-  -->
+  <!-- (#HEADER) -->
 
   <header class="header" data-header>
     <div class="container">
 
+      <!--logo in header (pc)  -->
       <a href="#" class="logo">
-        <img src="assets/images/logo-light.svg" width="74" height="24" alt="Adex home" class="logo-light">
+        <img src="./assets/images/logo-light.png" width="150" height="24" alt="pass & shot home" class="logo-light">
 
-        <img src="assets/images/logo-dark.svg" width="74" height="24" alt="Adex home" class="logo-dark">
+        <img src="./assets/images/logo-dark.png" width="150" height="24" alt="pass & shot home" class="logo-dark">
       </a>
 
       <nav class="navbar" data-navbar>
-
+        <!-- logo for mobile in hamburger menu -->
         <div class="navbar-top">
-          <a href="/" class="logo">
-            <img src="assets/images/logo-light.svg" width="74" height="24" alt="Adex home">
+          <a href="#" class="logo">
+            <img src="./assets/images/logo-light.png" width="74" height="24" alt="pass & shot home">
           </a>
-
+          <!-- x button -->
           <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
             <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
           </button>
         </div>
-
+        <!--PAGES IN NAV-->
         <ul class="navbar-list">
 
           <li>
@@ -70,11 +69,11 @@
           </li>
 
           <li>
-            <a href="#" class="navbar-link">Projects</a>
+            <a href="players.html" class="navbar-link">Players</a>
           </li>
 
           <li>
-            <a href="#" class="navbar-link">Blog</a>
+            <a href="coaches.html" class="navbar-link">coaches</a>
           </li>
 
           <li>
@@ -84,9 +83,9 @@
         </ul>
 
         <div class="wrapper">
-          <a href="mailto:info@email.com" class="contact-link">info@email.com</a>
+         <a href="mailto:any@email.com" class="contact-link">any@email.com</a>
 
-          <a href="tel:001234567890" class="contact-link">00 (123) 456 78 90</a>
+          <a href="tel:010000000000000" class="contact-link">010000000000000</a>
         </div>
 
         <ul class="social-list">
@@ -125,7 +124,7 @@
 
       </nav>
 
-      <a href="#" class="btn btn-primary">Free Trial</a>
+      <a href="#" class="btn btn-primary">shop</a>
 
       <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
         <ion-icon name="menu-outline" aria-hidden="true"></ion-icon>
