--- a/aboutUs.html
+++ b/aboutUs.html
@@ -145,7 +145,7 @@
       <div class="row">
         <div class="column">
           <div class="card">
-            <img src="assets/images/blog-1.jpg" alt="Jane" style="width:100%">
+            <img src="./assets/images/blog-1.jpg" alt="Jane" style="width:100%">
             <div class="container">
               <h2>Jane Doe</h2>
               <p class="title">CEO & Founder</p>
