--- a/home.html
+++ b/home.html
@@ -59,15 +59,15 @@
         <ul class="navbar-list">
 
           <li>
-            <a href="/" class="navbar-link">Home</a>
+            <a href="#" class="navbar-link">Home</a>
           </li>
 
           <li>
-            <a href="aboutUs.html" class="navbar-link">About</a>
+            <a href="#" class="navbar-link">About</a>
           </li>
 
           <li>
-            <a href="players.html" class="navbar-link">Players</a>
+            <a href="#" class="navbar-link">Players</a>
           </li>
 
           <li>
@@ -143,8 +143,8 @@
         <div class="container">
 
           <div class="hero-content">
-
-            <h1 class="h1 hero-title"><img src="./assets/images/logo-light2.png" width="380" height="100" alt=""> </h1>
+            <!-- text image -->
+            <h1 class="h1 hero-title"><img src="./assets/images/logo-light2.png" width="300" height="100" alt=""> </h1>
 
             <p class="hero-text">
               We are a creative agency that supports players' agency, focusing on establishing long-term cooperative relationships with our clients.
@@ -227,7 +227,7 @@
               <div class="service-card">
 
                 <div class="card-icon">
-                  <ion-icon name="call-outline" aria-hidden="true"></ion-icon>
+                  <ion-icon name="map-outline"aria-hidden="true"></ion-icon>
                 </div>
 
                 <h3 class="h4 card-title">Full coverage of all governorates of Egypt.</h3>
