--- a/home.html
+++ b/home.html
@@ -38,7 +38,7 @@
     <div class="container">
 
       <!--logo in header (pc)  -->
-      <a href="#" class="logo">
+      <a href="./home.html" class="logo">
         <img src="./assets/images/logo-light.png" width="150" height="24" alt="pass & shot home" class="logo-light">
 
         <img src="./assets/images/logo-dark.png" width="150" height="24" alt="pass & shot home" class="logo-dark">
@@ -47,7 +47,7 @@
       <nav class="navbar" data-navbar>
         <!-- logo for mobile in hamburger menu -->
         <div class="navbar-top">
-          <a href="#" class="logo">
+          <a href="./home.html" class="logo">
             <img src="./assets/images/logo-light.png" width="74" height="24" alt="pass & shot home">
           </a>
           <!-- x button -->
@@ -59,11 +59,11 @@
         <ul class="navbar-list">
 
           <li>
-            <a href="#" class="navbar-link">Home</a>
+            <a href="./home.html" class="navbar-link">Home</a>
           </li>
 
           <li>
-            <a href="#" class="navbar-link">About</a>
+            <a href="./aboutUs.html" class="navbar-link">About</a>
           </li>
 
           <li>
