--- a/home.html
+++ b/home.html
@@ -55,29 +55,23 @@
             <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
           </button>
         </div>
-        <!--PAGES IN NAV-->
+        <!--NAV IN PAGES  -->
         <ul class="navbar-list">
-
           <li>
-            <a href="./home.html" class="navbar-link">Home</a>
+            <a href="home.html" class="navbar-link">Home</a>
           </li>
-
           <li>
-            <a href="./aboutUs.html" class="navbar-link">About</a>
+            <a href="aboutUs.html" class="navbar-link">About us</a>
           </li>
-
           <li>
             <a href="#" class="navbar-link">Players</a>
           </li>
-
           <li>
             <a href="#" class="navbar-link">coaches</a>
           </li>
-
           <li>
             <a href="#" class="navbar-link">Contact</a>
           </li>
-
         </ul>
 
         <div class="wrapper">
@@ -87,25 +81,21 @@
         </div>
         <!-- social madia in mobile hamburger menu -->
         <ul class="social-list">
-
           <li>
             <a href="#" class="social-link">
               <ion-icon name="logo-twitter"></ion-icon>
             </a>
           </li>
-
           <li>
             <a href="#" class="social-link">
               <ion-icon name="logo-facebook"></ion-icon>
             </a>
           </li>
-
           <li>
             <a href="#" class="social-link">
               <ion-icon name="logo-dribbble"></ion-icon>
             </a>
           </li>
-
           <li>
             <a href="#" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
@@ -117,11 +107,10 @@
               <ion-icon name="logo-youtube"></ion-icon>
             </a>
           </li>
-
         </ul>
 
       </nav>
-
+         <!-- shop button -->
       <a href="#" class="btn btn-primary">shop</a>
 
       <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
@@ -426,7 +415,7 @@
         </div>
       </section>
 
-      <!-- (- #CTA) -->
+      <!-- (-footer  (#CTA) -->
 
       <section class="cta" aria-label="call to action">
         <div class="container">
