--- a/home.html
+++ b/home.html
@@ -38,17 +38,17 @@
     <div class="container">
 
       <!--logo in header (pc)  -->
-      <a href="./home.html" class="logo">
-        <img src="./assets/images/logo-light.png" width="150" height="24" alt="pass & shot home" class="logo-light">
+      <a href="home.html" class="logo">
+        <img src="assets/images/logo-light.png" width="150" height="24" alt="pass & shot home" class="logo-light">
 
-        <img src="./assets/images/logo-dark.png" width="150" height="24" alt="pass & shot home" class="logo-dark">
+        <img src="assets/images/logo-dark.png" width="150" height="24" alt="pass & shot home" class="logo-dark">
       </a>
 
       <nav class="navbar" data-navbar>
         <!-- logo for mobile in hamburger menu -->
         <div class="navbar-top">
-          <a href="./home.html" class="logo">
-            <img src="./assets/images/logo-light.png" width="74" height="24" alt="pass & shot home">
+          <a href="home.html" class="logo">
+            <img src="assets/images/logo-light.png" width="74" height="24" alt="pass & shot home">
           </a>
           <!-- x button -->
           <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
