--- a/kdb.html
+++ b/kdb.html
@@ -242,6 +242,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         </div>
       </div>
 
+      <div class="w3-container w3-card w3-white">
+        <video src="assets/images/videoplayback.mp4"  controls width="100%"></video>
+        </div>
+      </div>
+
+
     <!-- End Right Column -->
     </div>
     
