--- a/coaches.html
+++ b/coaches.html
@@ -23,7 +23,7 @@
                     <div class="card-content">
                         <h2 class="name">Pep Guardiola</h2>
                         <p class="description">Pep Guardiola is a former Span ish footballer, and current football coach at Manchester City, which participates in the English Premier League. Guardiola was a football player in the defensive midfield position, and spent his professional spell at FC Barcelona.</p>
-                        <a href="file:///G:Eslam/مشروع التخرج عملي/Pep Guardiola.html" class="button">View More</a>
+                        <a href="img/guardiola.jpg" class="button">View More</a>
                     </div>
                 </div>
                 <div class="cardH swiper-slide">
