--- a/Shop.html
+++ b/Shop.html
@@ -3,30 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="stayel2.css">
+    <title>Shop</title>
     <link rel="stylesheet" href="Stayel.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Sign Up</title>
-  <!--favicon (icon) -->
-  <link rel="shortcut icon" href="./favicon.png" type="image/svg+xml">
-
-  <!-- (- google font link)  -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap" rel="stylesheet">
-
-  
-
-  <!-- (- preload images)-->
-  <link rel="preload" as="image" href="./assets/images/hero-bg.jpg">
-  <link rel="preload" as="image" href="./assets/images/hero-slide-1.jpg">
-  <link rel="preload" as="image" href="./assets/images/hero-slide-2.jpg">
-  <link rel="preload" as="image" href="./assets/images/hero-slide-3.jpg">
-
+    <link rel="icon" href="icons/shop-icon.ico">
 </head>
-
 <body>
-
   <!-- (#HEADER) -->
 
   <header class="header" data-header>
@@ -59,10 +41,10 @@
             <a href="aboutUs.html" class="navbar-link">About us</a>
           </li>
           <li>
-            <a href="#" class="navbar-link">Players</a>
+            <a href="players.html" class="navbar-link">Players</a>
           </li>
           <li>
-            <a href="#" class="navbar-link">coaches</a>
+            <a href="coaches.html" class="navbar-link">coaches</a>
           </li>
           <li>
             <a href="#" class="navbar-link">Contact</a>
@@ -106,7 +88,7 @@
 
       </nav>
          <!-- shop button -->
-      <a href="#" class="btn btn-primary">shop</a>
+      <a href="Shop.html" class="btn btn-primary">shop</a>
 
       <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
         <ion-icon name="menu-outline" aria-hidden="true"></ion-icon>
@@ -117,40 +99,52 @@
     </div>
   </header>
 
-
-<!-- The Modal (contains the Sign Up form) -->
-<div id="id01" class="modal">
-  <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">times;</span>
-  <form class="modal-content" action="/action_page.php">
-    <div class="container">
-      <h1>Sign Up</h1>
-      <p>Please fill in this form to create an account.</p>
-      <hr>
-      <label for="email"><b>Email</b></label>
-      <input type="text" placeholder="Enter Email" name="email" required>
-
-      <label for="psw"><b>Password</b></label>
-      <input type="password" placeholder="Enter Password" name="psw" required>
-
-      <label for="psw-repeat"><b>Repeat Password</b></label>
-      <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
-
-      <label>
-        <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
-      </label>
-
-      <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
-
-      <div class="clearfix">
-        <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
-        <button type="submit" class="signup">Sign Up</button>
-      </div>
+  <div class="about-section">
+    <h1>Shop</h1>
     </div>
-  </form>
-</div>
-   <!-- - #FOOTER-->
+    <section class="Shop">
 
-   <footer class="footer">
+
+            <h2 class="title">Shop</h2>
+
+   
+
+        <div class="content2">
+            <div class="card">
+                <div class="icon">
+                    <a href="#" > <img src="img/football player.png" alt=""></a>
+                </div>
+                <div class="info">
+                    <h3>Players</h3>
+                    <p></p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="icon">
+                    <a href="#" > <img src="img/clothes.png" alt=""></a>
+                </div>
+                <div class="info">
+                    <h3>Sports supplies</h3>
+                    <p></p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="icon">
+                    <a href="coaches.html" target="_blank" > <img src="img/Coach.png" alt=""></a>
+                </div>
+                <div class="info">
+                    <h3>football coaches</h3>
+                    <p></p>
+                </div>
+            </div>
+        </div>
+        <div class="back">
+            <a href="home.html" target="_blank" class="btn1">Back To Home</a>
+        </div>
+    </section>
+  <!-- - #FOOTER-->
+
+  <footer class="footer">
     <div class="container grid-list">
 
       <div class="footer-brand">
@@ -274,6 +268,8 @@
   <!-- - ionicon-->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
+    
 
 </body>
 </html>
