--- a/home.html
+++ b/home.html
@@ -64,10 +64,10 @@
             <a href="aboutUs.html" class="navbar-link">About us</a>
           </li>
           <li>
-            <a href="#" class="navbar-link">Players</a>
+            <a href="players.html" class="navbar-link">Players</a>
           </li>
           <li>
-            <a href="#" class="navbar-link">coaches</a>
+            <a href="coaches.html" class="navbar-link">coaches</a>
           </li>
           <li>
             <a href="#" class="navbar-link">Contact</a>
@@ -111,7 +111,7 @@
 
       </nav>
          <!-- shop button -->
-      <a href="#" class="btn btn-primary">shop</a>
+      <a href="Shop.html" class="btn btn-primary">shop</a>
 
       <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
         <ion-icon name="menu-outline" aria-hidden="true"></ion-icon>
