header and footer

--- a/sign up.html
+++ b/sign up.html
@@ -29,6 +29,8 @@
 
   <!-- (#HEADER) -->
 
+  <!-- (#HEADER) -->
+
   <header class="header" data-header>
     <div class="container">
 
@@ -59,10 +61,10 @@
             <a href="aboutUs.html" class="navbar-link">About us</a>
           </li>
           <li>
-            <a href="#" class="navbar-link">Players</a>
+            <a href="players.html" class="navbar-link">Players</a>
           </li>
           <li>
-            <a href="#" class="navbar-link">coaches</a>
+            <a href="coaches.html" class="navbar-link">coaches</a>
           </li>
           <li>
             <a href="#" class="navbar-link">Contact</a>
@@ -106,7 +108,7 @@
 
       </nav>
          <!-- shop button -->
-      <a href="#" class="btn btn-primary">shop</a>
+      <a href="Shop.html" class="btn btn-primary">shop</a>
 
       <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
         <ion-icon name="menu-outline" aria-hidden="true"></ion-icon>
