--- a/gavi.html
+++ b/gavi.html
@@ -19,14 +19,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   - custom css link
 -->
 <link rel="stylesheet" href="./assets/css/style.css">
-
-<!-- 
-  - preload images
--->
-<link rel="preload" as="image" href="./assets/images/hero-bg.jpg">
-<link rel="preload" as="image" href="./assets/images/hero-slide-1.jpg">
-<link rel="preload" as="image" href="./assets/images/hero-slide-2.jpg">
-<link rel="preload" as="image" href="./assets/images/hero-slide-3.jpg">
+<link rel="stylesheet" href="assets/css/AboutUs.css">
 <link rel="stylesheet" href="assets/css/AboutUs.css">
     
 <!-- 
@@ -37,109 +30,134 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 <!-- 
   - google font link
 -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap" rel="stylesheet">
+
+<!-- 
+  - custom css link
+-->
+<link rel="stylesheet" href="./assets/css/style.css">
+
+<!-- 
+  - preload images
+-->
+<link rel="preload" as="image" href="./assets/images/hero-bg.jpg">
+<link rel="preload" as="image" href="./assets/images/hero-slide-1.jpg">
+<link rel="preload" as="image" href="./assets/images/hero-slide-2.jpg">
+<link rel="preload" as="image" href="./assets/images/hero-slide-3.jpg">
+
+
+<!-- 
+  - preload images
+-->
+<link rel="preload" as="image" href="./assets/images/hero-bg.jpg">
+<link rel="preload" as="image" href="./assets/images/hero-slide-1.jpg">
+<link rel="preload" as="image" href="./assets/images/hero-slide-2.jpg">
+<link rel="preload" as="image" href="./assets/images/hero-slide-3.jpg">
+
+<!-- 
+  - favicon
+-->
+<link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
+
+<!-- 
+  - google font link
+-->
 </head>
-<body class="w3-light-grey"  style="margin-top: 80px;">
+<body class="w3-light-grey"  style="margin-top: 80px; background-color: rgb(13, 143, 167) !important; ">
 
 <!-- (#HEADER) -->
 
-<header class="header" style="background-color: #1F2329;" data-header>
-  <div class="container">
+  <!-- (#HEADER) -->
 
-    <!--logo in header (pc)  -->
-    <a href="#" class="logo">
-      <img src="./assets/images/logo-light.png" width="150" height="24" alt="pass & shot home" class="logo-light">
+  <header class="header"   data-header>
+    <div class="container">
 
-      <img src="./assets/images/logo-dark.png" width="150" height="24" alt="pass & shot home" class="logo-dark">
-    </a>
+      <!--logo in header (pc)  -->
+      <a href="home.html" class="logo">
+        <img src="assets/images/logo-light.png" width="150" height="24" alt="pass & shot home" class="logo-light">
 
-    <nav class="navbar" data-navbar>
-      <!-- logo for mobile in hamburger menu -->
-      <div class="navbar-top">
-        <a href="#" class="logo">
-          <img src="./assets/images/logo-light.png" width="74" height="24" alt="pass & shot home">
-        </a>
-        <!-- x button -->
-        <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
-          <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
-        </button>
-      </div>
-      <!--PAGES IN NAV-->
-      <ul class="navbar-list">
+        <img src="assets/images/logo-dark.png" width="150" height="24" alt="pass & shot home" class="logo-dark">
+      </a>
 
-        <li>
-          <a href="/" class="navbar-link">Home</a>
-        </li>
-
-        <li>
-          <a href="aboutUs.html" class="navbar-link">About</a>
-        </li>
-
-        <li>
-          <a href="players.html" class="navbar-link">Players</a>
-        </li>
-
-        <li>
-          <a href="coaches.html" class="navbar-link">coaches</a>
-        </li>
-
-        <li>
-          <a href="#" class="navbar-link">Contact</a>
-        </li>
-
-      </ul>
-
-      <div class="wrapper">
-       <a href="mailto:any@email.com" class="contact-link">any@email.com</a>
-
-        <a href="tel:010000000000000" class="contact-link">010000000000000</a>
-      </div>
-
-      <ul class="social-list">
-
-        <li>
-          <a href="#" class="social-link">
-            <ion-icon name="logo-twitter"></ion-icon>
+      <nav class="navbar" data-navbar>
+        <!-- logo for mobile in hamburger menu -->
+        <div class="navbar-top">
+          <a href="home.html" class="logo">
+            <img src="assets/images/logo-light.png" width="74" height="24" alt="pass & shot home">
           </a>
-        </li>
+          <!-- x button -->
+          <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
+            <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
+          </button>
+        </div>
+        <!--NAV IN PAGES  -->
+        <ul class="navbar-list">
+          <li>
+            <a href="home.html" class="navbar-link">Home</a>
+          </li>
+          <li>
+            <a href="aboutUs.html" class="navbar-link">About us</a>
+          </li>
+          <li>
+            <a href="players.html" class="navbar-link">Players</a>
+          </li>
+          <li>
+            <a href="coaches.html" class="navbar-link">coaches</a>
+          </li>
+          <li>
+            <a href="#" class="navbar-link">Contact</a>
+          </li>
+        </ul>
 
-        <li>
-          <a href="#" class="social-link">
-            <ion-icon name="logo-facebook"></ion-icon>
-          </a>
-        </li>
+        <div class="wrapper">
+         <a href="mailto:any@email.com" class="contact-link">any@email.com</a>
 
-        <li>
-          <a href="#" class="social-link">
-            <ion-icon name="logo-dribbble"></ion-icon>
-          </a>
-        </li>
+          <a href="tel:010000000000000" class="contact-link">010000000000000</a>
+        </div>
+        <!-- social madia in mobile hamburger menu -->
+        <ul class="social-list">
+          <li>
+            <a href="#" class="social-link">
+              <ion-icon name="logo-twitter"></ion-icon>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="social-link">
+              <ion-icon name="logo-facebook"></ion-icon>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="social-link">
+              <ion-icon name="logo-dribbble"></ion-icon>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="social-link">
+              <ion-icon name="logo-instagram"></ion-icon>
+            </a>
+          </li>
 
-        <li>
-          <a href="#" class="social-link">
-            <ion-icon name="logo-instagram"></ion-icon>
-          </a>
-        </li>
+          <li>
+            <a href="#" class="social-link">
+              <ion-icon name="logo-youtube"></ion-icon>
+            </a>
+          </li>
+        </ul>
 
-        <li>
-          <a href="#" class="social-link">
-            <ion-icon name="logo-youtube"></ion-icon>
-          </a>
-        </li>
+      </nav>
+         <!-- shop button -->
+      <a href="Shop.html" class="btn btn-primary">shop</a>
 
-      </ul>
+      <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
+        <ion-icon name="menu-outline" aria-hidden="true"></ion-icon>
+      </button>
 
-    </nav>
+      <div class="overlay" data-nav-toggler data-overlay></div>
 
-    <a href="#" class="btn btn-primary">shop</a>
-
-    <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
-      <ion-icon name="menu-outline" aria-hidden="true"></ion-icon>
-    </button>
-
-    <div class="overlay" data-nav-toggler data-overlay></div>
-
-  </div>
-</header>
+    </div>
+  </header>
 
 <!-- Page Container -->
 <div class="w3-content w3-margin-top" style="max-width:1400px;">
@@ -251,7 +269,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   <!-- End Grid -->
   </div>
   <div class="back">
-    <a href="file:///G:Eslam/مشروع التخرج عملي/home.html" target="_blank" class="btn1">Back To Home</a>
+    <a href="home.html" target="_blank" class="btn1">Back To Home</a>
 </div>
   
   <!-- End Page Container -->
